--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Click
 clique==1.5.0
 coverage
 cx_Freeze
-ftrack-python-api
+ftrack-python-api==2.0.0
 ffmpeg-python
 google-api-python-client
 jsonschema
