--- a/pype/settings/defaults/system_settings/global/applications.json
+++ b/pype/settings/defaults/system_settings/global/applications.json
@@ -13,7 +13,8 @@
                     "MAYA_DISABLE_CER",
                     "PYMEL_SKIP_MEL_INIT",
                     "LC_ALL",
-                    "PYPE_LOG_NO_COLORS"
+                    "PYPE_LOG_NO_COLORS",
+                    "MAYA_TEST"
                 ]
             },
             "PYTHONPATH": [
@@ -27,7 +28,8 @@
             "MAYA_DISABLE_CER": "Yes",
             "PYMEL_SKIP_MEL_INIT": "Yes",
             "LC_ALL": "C",
-            "PYPE_LOG_NO_COLORS": "Yes"
+            "PYPE_LOG_NO_COLORS": "Yes",
+            "MAYA_TEST": "{MAYA_VERSION}"
         },
         "variants": {
             "maya_2020": {
@@ -659,9 +661,7 @@
                 "variant_label": "2.83",
                 "icon": "",
                 "executables": {
-                    "windows": [
-                        "C:\\Program Files\\Blender Foundation\\Blender 2.83\\blender.exe"
-                    ],
+                    "windows": [],
                     "darwin": [],
                     "linux": []
                 },
@@ -844,8 +844,15 @@
         "is_host": true,
         "environment": {
             "__environment_keys__": {
-                "unreal": []
-            }
+                "unreal": [
+                    "AVALON_UNREAL_PLUGIN",
+                    "PYPE_LOG_NO_COLORS",
+                    "QT_PREFERRED_BINDING"
+                ]
+            },
+            "AVALON_UNREAL_PLUGIN": "{PYPE_SETUP_PATH}/repos/avalon-unreal-integration",
+            "PYPE_LOG_NO_COLORS": "True",
+            "QT_PREFERRED_BINDING": "PySide"
         },
         "variants": {
             "unreal_4.24": {
