--- a/pype/settings/defaults/system_settings/global/applications.json
+++ b/pype/settings/defaults/system_settings/global/applications.json
@@ -3,7 +3,7 @@
         "enabled": true,
         "label": "Autodesk Maya",
         "icon": "{}/app_icons/maya.png",
-        "is_host": true,
+        "host_name": "maya",
         "environment": {
             "__environment_keys__": {
                 "maya": [
@@ -107,7 +107,7 @@
         "enabled": true,
         "label": "Autodesk MayaBatch",
         "icon": "{}/app_icons/maya.png",
-        "is_host": false,
+        "host_name": "maya",
         "environment": {
             "__environment_keys__": {
                 "mayabatch": [
@@ -205,7 +205,7 @@
         "enabled": true,
         "label": "Nuke",
         "icon": "{}/app_icons/nuke.png",
-        "is_host": true,
+        "host_name": "nuke",
         "environment": {
             "__environment_keys__": {
                 "nuke": [
@@ -287,7 +287,7 @@
         "enabled": true,
         "label": "Nuke X",
         "icon": "{}/app_icons/nuke.png",
-        "is_host": true,
+        "host_name": "nuke",
         "environment": {
             "__environment_keys__": {
                 "nukex": [
@@ -369,7 +369,7 @@
         "enabled": true,
         "label": "Nuke Studio",
         "icon": "{}/app_icons/nuke.png",
-        "is_host": true,
+        "host_name": "hiero",
         "environment": {
             "__environment_keys__": {
                 "nukestudio": [
@@ -453,7 +453,7 @@
         "enabled": true,
         "label": "Hiero",
         "icon": "{}/app_icons/hiero.png",
-        "is_host": true,
+        "host_name": "hiero",
         "environment": {
             "__environment_keys__": {
                 "hiero": [
@@ -539,7 +539,7 @@
         "enabled": true,
         "label": "BlackMagic Fusion",
         "icon": "{}/app_icons/fusion.png",
-        "is_host": true,
+        "host_name": "fusion",
         "environment": {
             "__environment_keys__": {
                 "fusion": []
@@ -584,7 +584,7 @@
         "enabled": true,
         "label": "Blackmagic DaVinci Resolve",
         "icon": "{}/app_icons/resolve.png",
-        "is_host": true,
+        "host_name": "resolve",
         "environment": {
             "__environment_keys__": {
                 "resolve": [
@@ -662,7 +662,7 @@
         "enabled": true,
         "label": "SideFX Houdini",
         "icon": "{}/app_icons/houdini.png",
-        "is_host": true,
+        "host_name": "houdini",
         "environment": {
             "__environment_keys__": {
                 "houdini": [
@@ -720,7 +720,7 @@
         "enabled": true,
         "label": "Blender",
         "icon": "{}/app_icons/blender.png",
-        "is_host": true,
+        "host_name": "blender",
         "environment": {
             "__environment_keys__": {
                 "blender": [
@@ -775,7 +775,7 @@
         "enabled": true,
         "label": "Toon Boom Harmony",
         "icon": "{}/app_icons/harmony.png",
-        "is_host": true,
+        "host_name": "harmony",
         "environment": {
             "__environment_keys__": {
                 "harmony": [
@@ -859,7 +859,7 @@
         "enabled": true,
         "label": "TVPaint",
         "icon": "{}/app_icons/tvpaint.png",
-        "is_host": true,
+        "host_name": "tvpaint",
         "environment": {
             "__environment_keys__": {
                 "tvpaint": [
@@ -911,7 +911,7 @@
         "enabled": true,
         "label": "Adobe Photoshop",
         "icon": "{}/app_icons/photoshop.png",
-        "is_host": true,
+        "host_name": "photoshop",
         "environment": {
             "__environment_keys__": {
                 "photoshop": [
@@ -971,7 +971,7 @@
         "enabled": true,
         "label": "Adobe AfterEffects",
         "icon": "{}/app_icons/aftereffects.png",
-        "is_host": true,
+        "host_name": "aftereffects",
         "environment": {
             "__environment_keys__": {
                 "aftereffects": [
@@ -1031,7 +1031,7 @@
         "enabled": true,
         "label": "CelAction 2D",
         "icon": "app_icons/celaction.png",
-        "is_host": true,
+        "host_name": "celaction",
         "environment": {
             "__environment_keys__": {
                 "celaction": [
@@ -1071,7 +1071,7 @@
         "enabled": true,
         "label": "Unreal Editor",
         "icon": "{}/app_icons/ue4.png'",
-        "is_host": true,
+        "host_name": "unreal",
         "environment": {
             "__environment_keys__": {
                 "unreal": [
@@ -1165,7 +1165,7 @@
         "enabled": true,
         "label": "DJV View",
         "icon": "{}/app_icons/djvView.png",
-        "is_host": false,
+        "host_name": "",
         "environment": {
             "__environment_keys__": {
                 "djvview": []
