--- a/pype/settings/defaults/system_settings/applications.json
+++ b/pype/settings/defaults/system_settings/applications.json
@@ -827,7 +827,12 @@
                 "variant_label": "2.90",
                 "icon": "",
                 "executables": {
-                    "windows": [],
+                    "windows": [
+                        [
+                            "C:\\Program Files\\Blender Foundation\\Blender 2.90\\blender.exe",
+                            ""
+                        ]
+                    ],
                     "darwin": [],
                     "linux": []
                 },
@@ -843,7 +848,12 @@
                 "variant_label": "2.83",
                 "icon": "",
                 "executables": {
-                    "windows": [],
+                    "windows": [
+                        [
+                            "C:\\Program Files\\Blender Foundation\\Blender 2.83\\blender.exe",
+                            ""
+                        ]
+                    ],
                     "darwin": [],
                     "linux": []
                 },
